--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2211,7 +2211,7 @@ ul.icons {
   #footer .copyright {
     border-top: 1px solid;
     font-size: 0.8rem;
-    opacity: 0.5;
+    opacity: 0.9;
     padding: 1rem 0;
     text-align: center; 
   }
@@ -2251,7 +2251,7 @@ body {
   padding-top: 3.25rem; }
   body:before {
     content: ' ';
-    background-image: url(../../images/bg.jpg);
+    /*background-image: url(../../images/bg.jpg);*/
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
